--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "react-spinners": "^0.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,4 +43,6 @@
   "devDependencies": {
     "web-vitals": "^2.1.4"
   }
+  
+  
 }
