--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.0",
     "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
-    "react-spinners": "^0.12.0"
+    "react-spinners": "^0.12.0",
+    "react-stripe-checkout": "^2.6.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +48,4 @@
   "devDependencies": {
     "web-vitals": "^2.1.4"
   }
-  
-  
 }
